--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,12 @@
 ---
-import Hamburguer from "./Hamburguer.astro";
-import Navigation from "./Navigation.astro";
+import Hamburger from './Hamburguer.astro';
+import Navigation from './Navigation.astro';
+import ThemeIcon from './ThemeIcon.astro';
 ---
-
 <header>
   <nav>
-    <Hamburguer/>
+    <Hamburger />
+    <ThemeIcon />
     <Navigation />
   </nav>
 </header>
